fix lỗi reuse cache đổi printstacktrace -> logger rename file để phân biệt user và admin controller